lab1/Code/syntax.output
Terminals unused in grammar

    LOWER_THAN_LP


State 9 conflicts: 1 reduce/reduce
State 29 conflicts: 1 shift/reduce
State 40 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: %empty
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier error SEMI
    8       | Specifier error CompSt
    9       | Specifier FunDec error
   10       | error SEMI

   11 ExtDecList: VarDec
   12           | VarDec COMMA ExtDecList

   13 Specifier: TYPE
   14          | StructSpecifier

   15 StructSpecifier: STRUCT OptTag LC DefList RC
   16                | STRUCT Tag
   17                | STRUCT OptTag error
   18                | STRUCT OptTag LC error RC
   19                | error OptTag LC DefList RC
   20                | error Tag

   21 OptTag: %empty
   22       | ID

   23 Tag: ID

   24 VarDec: ID
   25       | VarDec LB INT RB
   26       | VarDec LB error RB
   27       | error LB INT RB

   28 FunDec: ID LP VarList RP
   29       | ID LP RP
   30       | ID LP error RP
   31       | error LP RP

   32 VarList: ParamDec COMMA VarList
   33        | ParamDec

   34 ParamDec: Specifier VarDec

   35 CompSt: LC DefList StmtList RC
   36       | LC error RC

   37 StmtList: %empty
   38         | Stmt StmtList

   39 Stmt: Exp SEMI
   40     | CompSt
   41     | RETURN Exp SEMI
   42     | IF LP Exp RP Stmt
   43     | IF LP Exp RP Stmt ELSE Stmt
   44     | WHILE LP Exp RP Stmt
   45     | IF error ELSE Stmt
   46     | IF error Stmt
   47     | WHILE error Stmt
   48     | RETURN error SEMI
   49     | error SEMI

   50 DefList: %empty
   51        | Def DefList

   52 Def: Specifier DecList SEMI
   53    | Specifier error SEMI

   54 DecList: Dec
   55        | Dec COMMA DecList
   56        | error DecList

   57 Dec: VarDec
   58    | VarDec ASSIGNOP Exp
   59    | VarDec error Exp
   60    | VarDec ASSIGNOP error

   61 Exp: Exp ASSIGNOP Exp
   62    | Exp AND Exp
   63    | Exp OR Exp
   64    | Exp RELOP Exp
   65    | Exp PLUS Exp
   66    | Exp MINUS Exp
   67    | Exp STAR Exp
   68    | Exp DIV Exp
   69    | LP Exp RP
   70    | MINUS Exp
   71    | NOT Exp
   72    | ID LP Args RP
   73    | ID LP RP
   74    | Exp LB Exp RB
   75    | Exp DOT ID
   76    | ID
   77    | INT
   78    | FLOAT
   79    | Exp error Exp
   80    | Exp error
   81    | ID LP error RP

   82 Args: Exp COMMA Args
   83     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7 8 9 10 17 18 19 20 26 27 30 31 36 45 46 47 48 49 53 56 59 60 79 80 81
    INT (258) 25 27 77
    FLOAT (259) 78
    ID (260) 22 23 24 28 29 30 72 73 75 76 81
    PLUS (261) 65
    MINUS (262) 66 70
    STAR (263) 67
    DIV (264) 68
    ASSIGNOP (265) 58 60 61
    SEMI (266) 4 5 7 10 39 41 48 49 52 53
    COMMA (267) 12 32 55 82
    RELOP (268) 64
    AND (269) 62
    OR (270) 63
    DOT (271) 75
    NOT (272) 71
    TYPE (273) 13
    LP (274) 28 29 30 31 42 43 44 69 72 73 81
    RP (275) 28 29 30 31 42 43 44 69 72 73 81
    LB (276) 25 26 27 74
    RB (277) 25 26 27 74
    LC (278) 15 18 19 35 36
    RC (279) 15 18 19 35 36
    STRUCT (280) 15 16 17 18
    RETURN (281) 41 48
    IF (282) 42 43 45 46
    ELSE (283) 43 45
    WHILE (284) 44 47
    LOWER_THAN_LB (285)
    LOWER_THAN_LP (286)
    EXP_ERROR (287)
    LOWER_ID (288)
    HIGHER_ID (289)
    UMINUS (290)
    LOWER_THAN_ELSE (291)


Nonterminals, with rules where they appear

    $accept (37)
        on left: 0
    Program (38)
        on left: 1
        on right: 0
    ExtDefList (39)
        on left: 2 3
        on right: 1 3
    ExtDef (40)
        on left: 4 5 6 7 8 9 10
        on right: 3
    ExtDecList (41)
        on left: 11 12
        on right: 4 12
    Specifier (42)
        on left: 13 14
        on right: 4 5 6 7 8 9 34 52 53
    StructSpecifier (43)
        on left: 15 16 17 18 19 20
        on right: 14
    OptTag (44)
        on left: 21 22
        on right: 15 17 18 19
    Tag (45)
        on left: 23
        on right: 16 20
    VarDec (46)
        on left: 24 25 26 27
        on right: 11 12 25 26 34 57 58 59 60
    FunDec (47)
        on left: 28 29 30 31
        on right: 6 9
    VarList (48)
        on left: 32 33
        on right: 28 32
    ParamDec (49)
        on left: 34
        on right: 32 33
    CompSt (50)
        on left: 35 36
        on right: 6 8 40
    StmtList (51)
        on left: 37 38
        on right: 35 38
    Stmt (52)
        on left: 39 40 41 42 43 44 45 46 47 48 49
        on right: 38 42 43 44 45 46 47
    DefList (53)
        on left: 50 51
        on right: 15 19 35 51
    Def (54)
        on left: 52 53
        on right: 51
    DecList (55)
        on left: 54 55 56
        on right: 52 55 56
    Dec (56)
        on left: 57 58 59 60
        on right: 54 55
    Exp (57)
        on left: 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81
        on right: 39 41 42 43 44 58 59 61 62 63 64 65 66 67 68 69 70 71 74 75 79 80 82 83
    Args (58)
        on left: 82 83
        on right: 72 82


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

   10 ExtDef: error . SEMI
   19 StructSpecifier: error . OptTag LC DefList RC
   20                | error . Tag

    ID    shift, and go to state 9
    SEMI  shift, and go to state 10

    $default  reduce using rule 21 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 2

   13 Specifier: TYPE .

    $default  reduce using rule 13 (Specifier)


State 3

   15 StructSpecifier: STRUCT . OptTag LC DefList RC
   16                | STRUCT . Tag
   17                | STRUCT . OptTag error
   18                | STRUCT . OptTag LC error RC

    ID  shift, and go to state 9

    $default  reduce using rule 21 (OptTag)

    OptTag  go to state 13
    Tag     go to state 14


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 15


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    3 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList       go to state 16
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . error SEMI
    8       | Specifier . error CompSt
    9       | Specifier . FunDec error

    error  shift, and go to state 17
    ID     shift, and go to state 18
    SEMI   shift, and go to state 19

    ExtDecList  go to state 20
    VarDec      go to state 21
    FunDec      go to state 22


State 8

   14 Specifier: StructSpecifier .

    $default  reduce using rule 14 (Specifier)


State 9

   22 OptTag: ID .
   23 Tag: ID .

    error     reduce using rule 22 (OptTag)
    error     [reduce using rule 23 (Tag)]
    ID        reduce using rule 23 (Tag)
    SEMI      reduce using rule 23 (Tag)
    $default  reduce using rule 22 (OptTag)


State 10

   10 ExtDef: error SEMI .

    $default  reduce using rule 10 (ExtDef)


State 11

   19 StructSpecifier: error OptTag . LC DefList RC

    LC  shift, and go to state 23


State 12

   20 StructSpecifier: error Tag .

    $default  reduce using rule 20 (StructSpecifier)


State 13

   15 StructSpecifier: STRUCT OptTag . LC DefList RC
   17                | STRUCT OptTag . error
   18                | STRUCT OptTag . LC error RC

    error  shift, and go to state 24
    LC     shift, and go to state 25


State 14

   16 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 16 (StructSpecifier)


State 15

    0 $accept: Program $end .

    $default  accept


State 16

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 17

    7 ExtDef: Specifier error . SEMI
    8       | Specifier error . CompSt
   27 VarDec: error . LB INT RB
   31 FunDec: error . LP RP

    SEMI  shift, and go to state 26
    LP    shift, and go to state 27
    LB    shift, and go to state 28
    LC    shift, and go to state 29

    CompSt  go to state 30


State 18

   24 VarDec: ID .
   28 FunDec: ID . LP VarList RP
   29       | ID . LP RP
   30       | ID . LP error RP

    LP  shift, and go to state 31

    $default  reduce using rule 24 (VarDec)


State 19

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 20

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 32


State 21

   11 ExtDecList: VarDec .
   12           | VarDec . COMMA ExtDecList
   25 VarDec: VarDec . LB INT RB
   26       | VarDec . LB error RB

    COMMA  shift, and go to state 33
    LB     shift, and go to state 34

    $default  reduce using rule 11 (ExtDecList)


State 22

    6 ExtDef: Specifier FunDec . CompSt
    9       | Specifier FunDec . error

    error  shift, and go to state 35
    LC     shift, and go to state 29

    CompSt  go to state 36


State 23

   19 StructSpecifier: error OptTag LC . DefList RC

    error   shift, and go to state 37
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 50 (DefList)

    Specifier        go to state 38
    StructSpecifier  go to state 8
    DefList          go to state 39
    Def              go to state 40


State 24

   17 StructSpecifier: STRUCT OptTag error .

    $default  reduce using rule 17 (StructSpecifier)


State 25

   15 StructSpecifier: STRUCT OptTag LC . DefList RC
   18                | STRUCT OptTag LC . error RC

    error   shift, and go to state 41
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 50 (DefList)

    Specifier        go to state 38
    StructSpecifier  go to state 8
    DefList          go to state 42
    Def              go to state 40


State 26

    7 ExtDef: Specifier error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 27

   31 FunDec: error LP . RP

    RP  shift, and go to state 43


State 28

   27 VarDec: error LB . INT RB

    INT  shift, and go to state 44


State 29

   35 CompSt: LC . DefList StmtList RC
   36       | LC . error RC

    error   shift, and go to state 45
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 50 (DefList)]
    INT     reduce using rule 50 (DefList)
    FLOAT   reduce using rule 50 (DefList)
    ID      reduce using rule 50 (DefList)
    MINUS   reduce using rule 50 (DefList)
    NOT     reduce using rule 50 (DefList)
    LP      reduce using rule 50 (DefList)
    LC      reduce using rule 50 (DefList)
    RC      reduce using rule 50 (DefList)
    RETURN  reduce using rule 50 (DefList)
    IF      reduce using rule 50 (DefList)
    WHILE   reduce using rule 50 (DefList)

    Specifier        go to state 38
    StructSpecifier  go to state 8
    DefList          go to state 46
    Def              go to state 40


State 30

    8 ExtDef: Specifier error CompSt .

    $default  reduce using rule 8 (ExtDef)


State 31

   28 FunDec: ID LP . VarList RP
   29       | ID LP . RP
   30       | ID LP . error RP

    error   shift, and go to state 47
    TYPE    shift, and go to state 2
    RP      shift, and go to state 48
    STRUCT  shift, and go to state 3

    Specifier        go to state 49
    StructSpecifier  go to state 8
    VarList          go to state 50
    ParamDec         go to state 51


State 32

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 33

   12 ExtDecList: VarDec COMMA . ExtDecList

    error  shift, and go to state 52
    ID     shift, and go to state 53

    ExtDecList  go to state 54
    VarDec      go to state 21


State 34

   25 VarDec: VarDec LB . INT RB
   26       | VarDec LB . error RB

    error  shift, and go to state 55
    INT    shift, and go to state 56


State 35

    9 ExtDef: Specifier FunDec error .

    $default  reduce using rule 9 (ExtDef)


State 36

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 37

   19 StructSpecifier: error . OptTag LC DefList RC
   20                | error . Tag

    ID  shift, and go to state 9

    $default  reduce using rule 21 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 38

   52 Def: Specifier . DecList SEMI
   53    | Specifier . error SEMI

    error  shift, and go to state 57
    ID     shift, and go to state 53

    VarDec   go to state 58
    DecList  go to state 59
    Dec      go to state 60


State 39

   19 StructSpecifier: error OptTag LC DefList . RC

    RC  shift, and go to state 61


State 40

   51 DefList: Def . DefList

    error   shift, and go to state 37
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 50 (DefList)]
    INT     reduce using rule 50 (DefList)
    FLOAT   reduce using rule 50 (DefList)
    ID      reduce using rule 50 (DefList)
    MINUS   reduce using rule 50 (DefList)
    NOT     reduce using rule 50 (DefList)
    LP      reduce using rule 50 (DefList)
    LC      reduce using rule 50 (DefList)
    RC      reduce using rule 50 (DefList)
    RETURN  reduce using rule 50 (DefList)
    IF      reduce using rule 50 (DefList)
    WHILE   reduce using rule 50 (DefList)

    Specifier        go to state 38
    StructSpecifier  go to state 8
    DefList          go to state 62
    Def              go to state 40


State 41

   18 StructSpecifier: STRUCT OptTag LC error . RC
   19                | error . OptTag LC DefList RC
   20                | error . Tag

    ID  shift, and go to state 9
    RC  shift, and go to state 63

    $default  reduce using rule 21 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 42

   15 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 64


State 43

   31 FunDec: error LP RP .

    $default  reduce using rule 31 (FunDec)


State 44

   27 VarDec: error LB INT . RB

    RB  shift, and go to state 65


State 45

   19 StructSpecifier: error . OptTag LC DefList RC
   20                | error . Tag
   36 CompSt: LC error . RC

    ID  shift, and go to state 9
    RC  shift, and go to state 66

    $default  reduce using rule 21 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 46

   35 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 67
    INT     shift, and go to state 68
    FLOAT   shift, and go to state 69
    ID      shift, and go to state 70
    MINUS   shift, and go to state 71
    NOT     shift, and go to state 72
    LP      shift, and go to state 73
    LC      shift, and go to state 29
    RETURN  shift, and go to state 74
    IF      shift, and go to state 75
    WHILE   shift, and go to state 76

    RC  reduce using rule 37 (StmtList)

    CompSt    go to state 77
    StmtList  go to state 78
    Stmt      go to state 79
    Exp       go to state 80


State 47

   19 StructSpecifier: error . OptTag LC DefList RC
   20                | error . Tag
   30 FunDec: ID LP error . RP

    ID  shift, and go to state 9
    RP  shift, and go to state 81

    $default  reduce using rule 21 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 48

   29 FunDec: ID LP RP .

    $default  reduce using rule 29 (FunDec)


State 49

   34 ParamDec: Specifier . VarDec

    error  shift, and go to state 52
    ID     shift, and go to state 53

    VarDec  go to state 82


State 50

   28 FunDec: ID LP VarList . RP

    RP  shift, and go to state 83


State 51

   32 VarList: ParamDec . COMMA VarList
   33        | ParamDec .

    COMMA  shift, and go to state 84

    $default  reduce using rule 33 (VarList)


State 52

   27 VarDec: error . LB INT RB

    LB  shift, and go to state 28


State 53

   24 VarDec: ID .

    $default  reduce using rule 24 (VarDec)


State 54

   12 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 12 (ExtDecList)


State 55

   26 VarDec: VarDec LB error . RB

    RB  shift, and go to state 85


State 56

   25 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 86


State 57

   27 VarDec: error . LB INT RB
   53 Def: Specifier error . SEMI
   56 DecList: error . DecList

    error  shift, and go to state 87
    ID     shift, and go to state 53
    SEMI   shift, and go to state 88
    LB     shift, and go to state 28

    VarDec   go to state 58
    DecList  go to state 89
    Dec      go to state 60


State 58

   25 VarDec: VarDec . LB INT RB
   26       | VarDec . LB error RB
   57 Dec: VarDec .
   58    | VarDec . ASSIGNOP Exp
   59    | VarDec . error Exp
   60    | VarDec . ASSIGNOP error

    error     shift, and go to state 90
    ASSIGNOP  shift, and go to state 91
    LB        shift, and go to state 34

    SEMI   reduce using rule 57 (Dec)
    COMMA  reduce using rule 57 (Dec)


State 59

   52 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 92


State 60

   54 DecList: Dec .
   55        | Dec . COMMA DecList

    COMMA  shift, and go to state 93

    $default  reduce using rule 54 (DecList)


State 61

   19 StructSpecifier: error OptTag LC DefList RC .

    $default  reduce using rule 19 (StructSpecifier)


State 62

   51 DefList: Def DefList .

    $default  reduce using rule 51 (DefList)


State 63

   18 StructSpecifier: STRUCT OptTag LC error RC .

    $default  reduce using rule 18 (StructSpecifier)


State 64

   15 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 15 (StructSpecifier)


State 65

   27 VarDec: error LB INT RB .

    $default  reduce using rule 27 (VarDec)


State 66

   36 CompSt: LC error RC .

    $default  reduce using rule 36 (CompSt)


State 67

   49 Stmt: error . SEMI

    SEMI  shift, and go to state 94


State 68

   77 Exp: INT .

    $default  reduce using rule 77 (Exp)


State 69

   78 Exp: FLOAT .

    $default  reduce using rule 78 (Exp)


State 70

   72 Exp: ID . LP Args RP
   73    | ID . LP RP
   76    | ID .
   81    | ID . LP error RP

    LP  shift, and go to state 95

    $default  reduce using rule 76 (Exp)


State 71

   70 Exp: MINUS . Exp

    INT    shift, and go to state 68
    FLOAT  shift, and go to state 69
    ID     shift, and go to state 70
    MINUS  shift, and go to state 71
    NOT    shift, and go to state 72
    LP     shift, and go to state 73

    Exp  go to state 96


State 72

   71 Exp: NOT . Exp

    INT    shift, and go to state 68
    FLOAT  shift, and go to state 69
    ID     shift, and go to state 70
    MINUS  shift, and go to state 71
    NOT    shift, and go to state 72
    LP     shift, and go to state 73

    Exp  go to state 97


State 73

   69 Exp: LP . Exp RP

    INT    shift, and go to state 68
    FLOAT  shift, and go to state 69
    ID     shift, and go to state 70
    MINUS  shift, and go to state 71
    NOT    shift, and go to state 72
    LP     shift, and go to state 73

    Exp  go to state 98


State 74

   41 Stmt: RETURN . Exp SEMI
   48     | RETURN . error SEMI

    error  shift, and go to state 99
    INT    shift, and go to state 68
    FLOAT  shift, and go to state 69
    ID     shift, and go to state 70
    MINUS  shift, and go to state 71
    NOT    shift, and go to state 72
    LP     shift, and go to state 73

    Exp  go to state 100


State 75

   42 Stmt: IF . LP Exp RP Stmt
   43     | IF . LP Exp RP Stmt ELSE Stmt
   45     | IF . error ELSE Stmt
   46     | IF . error Stmt

    error  shift, and go to state 101
    LP     shift, and go to state 102


State 76

   44 Stmt: WHILE . LP Exp RP Stmt
   47     | WHILE . error Stmt

    error  shift, and go to state 103
    LP     shift, and go to state 104


State 77

   40 Stmt: CompSt .

    $default  reduce using rule 40 (Stmt)


State 78

   35 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 105


State 79

   38 StmtList: Stmt . StmtList

    error   shift, and go to state 67
    INT     shift, and go to state 68
    FLOAT   shift, and go to state 69
    ID      shift, and go to state 70
    MINUS   shift, and go to state 71
    NOT     shift, and go to state 72
    LP      shift, and go to state 73
    LC      shift, and go to state 29
    RETURN  shift, and go to state 74
    IF      shift, and go to state 75
    WHILE   shift, and go to state 76

    RC  reduce using rule 37 (StmtList)

    CompSt    go to state 77
    StmtList  go to state 106
    Stmt      go to state 79
    Exp       go to state 80


State 80

   39 Stmt: Exp . SEMI
   61 Exp: Exp . ASSIGNOP Exp
   62    | Exp . AND Exp
   63    | Exp . OR Exp
   64    | Exp . RELOP Exp
   65    | Exp . PLUS Exp
   66    | Exp . MINUS Exp
   67    | Exp . STAR Exp
   68    | Exp . DIV Exp
   74    | Exp . LB Exp RB
   75    | Exp . DOT ID
   79    | Exp . error Exp
   80    | Exp . error
